<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_boder_top_15"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/sleep_timer_title"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/grey_light" />

        <LinearLayout
            android:id="@+id/option15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tvOption15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep_timer_15"
                android:textColor="@color/text_black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/option30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tvOption30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep_timer_30"
                android:textColor="@color/text_black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/option45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tvOption45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep_timer_45"
                android:textColor="@color/text_black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/option60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tvOption60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep_timer_60"
                android:textColor="@color/text_black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionEndOfTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tvOptionEndOfTrack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep_timer_end_of_track"
                android:textColor="@color/text_black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tvOptionCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep_timer_custom"
                android:textColor="@color/text_black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</layout>
