<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bg_corner15_white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/delete_song_from_library_title"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/messageDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="15dp"
            android:gravity="center"
            android:text="@string/delete_song_from_library_message"
            android:textColor="@color/txt_hint"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/removeSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/bg_corner_25_purple"
            android:gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/action_delete"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cancelDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/playlist_cancel"
            android:textColor="@color/purple_1"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>