<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bg_corner15_white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sleep_timer_custom_title"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <NumberPicker
                    android:id="@+id/hoursPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sleep_timer_hours"
                    android:textColor="@color/txt_hint"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <NumberPicker
                    android:id="@+id/minutesPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sleep_timer_minutes"
                    android:textColor="@color/txt_hint"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/confirmTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/bg_corner_25_purple"
            android:gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/sleep_timer_confirm"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cancelDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/sleep_timer_cancel"
            android:textColor="@color/purple_1"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
